force-app/main/default/objects/FEC_Collection_Interactions__c/FEC_Collection_Interactions__c.object-meta.xml
<CustomObject>
    <description>Tương tác thu hồi nợ</description>
    <label>Collection Interactions</label>
    <nameField>
        <label>Collection Interactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>