force-app/main/default/objects/FEC_Collection_Interactions__c/fields/FEC_Contacted_Person__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contacted_Person__c</fullName>
    <description>Người được liên hệ</description>
    <label>Contacted Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>