force-app/main/default/objects/FEC_Collection_Interactions__c/fields/FEC_Interacted_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interacted_Code__c</fullName>
    <description>Mã tác động</description>
    <label>Interacted Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>