force-app/main/default/objects/FEC_Collection_Interactions__c/fields/FEC_Interacted_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interacted_Phone__c</fullName>
    <description>Số điện thoại tác động</description>
    <label>Interacted Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>