force-app/main/default/objects/FEC_Collection_Interactions__c/fields/FEC_Next_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Interaction_Date__c</fullName>
    <description>Ngày tác động kế tiếp</description>
    <label>Next Interaction Date</label>
    <type>Date</type>
</CustomField>