force-app/main/default/objects/FEC_Collection_Interactions__c/fields/FEC_Note__c.field-meta.xml
<CustomField>
    <fullName>FEC_Note__c</fullName>
    <description>Ghi chú</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>