force-app/main/default/objects/FEC_Collection_Interactions__c/fields/FEC_Promised_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Promised_Repayment_Amount__c</fullName>
    <description>Số tiền KH hứa thanh toán</description>
    <label>Promised Repayment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>